# midwest-vr

./: package.json
.github/workflows/: build-mac.yml
Project VR 26/: 1 - READ ME FIRST.txt  2 - Start Here.command  3 - Open MidWest-VR.command  PASTE_THIS_INTO_GITHUB.yml  README.md  Rebuild.command  bootstrap.sh  build-portable.sh  index.html  package.json  tailwind.config.js  vite.config.ts
Project VR 26/catalog/: catalog.json
Project VR 26/docs/: BUILD_VIA_GITHUB.md  CLASSROOM_CHECKLIST.md  CONNECT_HEADSETS.md  PORTABLE_SSD.md  SAFETY.md
Project VR 26/launcher/: README.md  build.gradle.kts  settings.gradle.kts
Project VR 26/launcher/app/: build.gradle.kts  proguard-rules.pro
Project VR 26/src/: App.tsx  index.css  main.tsx  types.ts
Project VR 26/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
Project VR 26/src-tauri/capabilities/: default.json
Project VR 26/src-tauri/src/: adb.rs  apps.rs  catalog.rs  devices.rs  discover.rs  error.rs  kiosk.rs  launcher.rs  lib.rs  main.rs  mdns_discovery.rs  network.rs  profile.rs  settings.rs  setup.rs  wifi.rs  wireless.rs
Project VR 26/src/components/: ConfirmAction.tsx  DeviceCard.tsx  DevicePicker.tsx  EmptyState.tsx  PageHeader.tsx  Sidebar.tsx  SubNav.tsx  TitleBar.tsx  WelcomeTour.tsx
Project VR 26/src/hooks/: useDevices.ts
Project VR 26/src/lib/: tauri.ts  utils.ts
Project VR 26/src/pages/: Apps.tsx  ClassMode.tsx  Connect.tsx  Dashboard.tsx  Discover.tsx  Kiosk.tsx  Launcher.tsx  Profiles.tsx  Settings.tsx  Setup.tsx  Stores.tsx  WiFi.tsx  Wireless.tsx
_UPLOAD_PHASE_40/: README.txt
_UPLOAD_PHASE_40/src/: types.ts
_UPLOAD_PHASE_40/src-tauri/src/: lib.rs  settings.rs
_UPLOAD_PHASE_40/src/components/: Sidebar.tsx  TitleBar.tsx  WirelessPanel.tsx
_UPLOAD_PHASE_40/src/lib/: tauri.ts
_UPLOAD_PHASE_41/: README.txt
_UPLOAD_PHASE_42/: README.txt
_UPLOAD_PHASE_43_44/: README.txt
_UPLOAD_PHASE_43_44/src-tauri/: tauri.conf.json
_UPLOAD_THESE_FILES/: README.txt
_UPLOAD_THESE_FILES/src/: App.tsx
src/: types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: wireless.rs
src/components/: HeadsetPanel.tsx  TitleBar.tsx
src/pages/: Dashboard.tsx
(+35 files in other folders)
