[package]
name = "midwest-vr"
version = "0.1.0"
description = "Locally-managed Meta Quest 2 fleet manager"
authors = ["Drew"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "midwest_vr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"     # optimize for size; matters for portable SSD builds
panic = "abort"
strip = true
